<resources>
    <string name="app_name">Project5</string>
    <string name="lbl_bottom_navigation">Bottom Navigate</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_hello_world">Hello World</string>
    <string name="lbl_description">PADC Myanmar</string>
    <string name="lbl_bottom_sheet">Bottom Sheet</string>
    <string name="lbl_collapsing_toolbar">Collapsing Tool Bar</string>

    <string name="txt_paragraph">Paragraphs are the building blocks of papers.

        Many students define paragraphs in terms of length: a paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality, though, the unity and coherence of ideas among sentences is what constitutes a paragraph.

        A paragraph is defined as “a group of sentences or a single sentence that forms a unit” (Lunsford and Connors 116).

        Length and appearance do not determine whether a section in a paper is a paragraph.

        For instance, in some styles of writing, particularly journalistic styles, a paragraph can be just one sentence long.

        Ultimately, a paragraph is a sentence or group of sentences that support one main idea. In this handout, we will refer to this as the “controlling idea,” because it controls what happens in the rest of the paragraph.

        Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper.

        What is the most important idea that you are trying to convey to your reader?

        The information in each paragraph must be related to that idea.

        In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph.

        A working thesis functions like a seed from which your paper, and your ideas, will grow.

        The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper

        The decision about what to put into your paragraphs begins with the germination of a seed of ideas; this “germination process” is better known as brainstorming.

        There are many techniques for brainstorming; whichever one you choose, this stage of paragraph development cannot be skipped.

        Building paragraphs can be like building a skyscraper: there must be a well-planned foundation that supports what you are building.

        Any cracks, inconsistencies, or other corruptions of the foundation can cause your whole paper to crumble.

        So, let’s suppose that you have done some brainstorming to develop your thesis.

        What else should you keep in mind as you begin to create paragraphs?

        Despite the fact that piranhas are relatively harmless, many people continue to believe the pervasive myth that piranhas are dangerous to humans.

        This impression of piranhas is exacerbated by their mischaracterization in popular media.

        For example, the promotional poster for the 1978 horror film Piranha features an oversized piranha poised to bite the leg of an unsuspecting woman.

        Such a terrifying representation easily captures the imagination and promotes unnecessary fear.

        While the trope of the man-eating piranhas lends excitement to the adventure stories, it bears little resemblance to the real-life piranha.

        By paying more attention to fact than fiction, humans may finally be able to let go of this inaccurate belief.</string>
    <string name="lbl_coordinator">Coordinator Layout</string>
    <string name="lbl_about">About</string>
    <string name="lbl_general">General</string>
    <string name="lbl_trash">Trash</string>
    <string name="lbl_recent">Recent</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_android_studio">Android Studio</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

</resources>